# bip39validator

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  dev-requirements.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  run-unit-tests.yml  tests.yml
bip39validator/: BIP39WordList.py  InitUniqResult.py  InvalidRemoteContent.py  InvalidWordList.py  LevDistResult.py  MaxLengthResult.py  ValidWordList.py  ValidationFailed.py  __init__.py  __main__.py  __version__.py  _logging.py  validation_tests.py
bip39validator/internal/: data_structs.py  logging.py  util.py  validation_tests.py
docs/: api.rst  conf.py  contributing.rst  donate.rst  examples.rst  index.rst  installation.rst  introduction.rst  running.rst
src/: main.py
src/bip39validator/: __init__.py  _data_structs.py  _util.py  _validation_tests.py  api.py  data_structs.py  logging.py  main.py  util.py  validation_tests.py
src/tests/: test_bip39wordlist.py  test_maxlengthresult.py
tests/: test_bip39wordlist.py  test_inituniqresult.py  test_levdistresult.py  test_maxlengthresult.py  test_programs.py
