# Experimental setup.py configuration using pbr
[metadata]
name='bip39validator',
version='1.0.0rc1',
url=https://github.com/ZenulAbidin/bip39validator
license=MIT
author=Ali Sherief
author-email=alihsherief@linuxmail.org
summary=Validator for BIP39 wordlists
description-file=README.rst
description-content-type = text/x-rst; charset=UTF-8
classifiers=
        Development Status :: 1 - Production/Stable
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: Unix
        Operating System :: POSIX
        Operating System :: Microsoft :: Windows
        Programming Language :: Python
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: Implementation :: CPython
        Topic :: Utilities
    project_urls=
        Changelog: https://github.com/ZenulAbidin/bip39validator/blob/master/CHANGELOG.rst
        Issue Tracker: https://github.com/ZenulAbidin/bip39validator/issues
    keywords=
        bip39
        bitcoin
    python_requires=>=3.6,
    install_requires=
        jellyfish
        rich
        requests
        pbr
    extras_require=
        # eg:
        #   'rst': ['docutils>=0.11'],
        #   ':python_version=="2.6"': ['argparse'],
    setup_requires=
        pytest-runner
    entry_points=
        console_scripts:
            bip39validator = bip39validator.main:main

[files]
packages =
    src.bip39validator